# sync-vs-async

./: README.md  docker-compose.yml
async_web/: Dockerfile  __main__.py  app.py  pyproject.toml
sync_web/: Dockerfile  app.py  pyproject.toml
tester/: Dockerfile  app.js  package-lock.json
