
[project]
name = "async-server"
version = "0.1.0"
description = "A FastAPI web server"

dependencies = [
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
]

[tool.setuptools]
packages = ["async_web"]

[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "settings: Provide custom Settings instance for the test client",
]
